<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="find_password">忘记密码？</string>
    <string name="register">注册</string>
    <string name="password_hint">密码</string>
    <string name="user_hint">用户名（邮箱）</string>
    
</resources>
