<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="#FFFFFF"
	    android:orientation="vertical" 
	    android:layout_gravity="center_vertical"
	    android:gravity="center_vertical"
	    android:paddingTop="15dp"
	    >
    
	    <ImageView 
	        android:id="@+id/imageview"
	        android:layout_width="150dp"
	        android:layout_height="150dp"
	        android:src="@drawable/welcome_logo"
	        android:layout_gravity="center"
	        android:layout_marginTop="80dp"
	        />
	    <LinearLayout 
	        android:id="@+id/login_user"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:background="@drawable/lbs_popup_bg"
	        android:layout_marginTop="10dp"
	        >
	     <EditText 
	            android:id="@+id/username"
	            android:layout_width="match_parent"
	            android:layout_height="50dp"
	            android:inputType="text"
	            android:maxLength="30"
	            android:maxLines="1"
	            android:hint="@string/user_hint"
	            android:background="#FBFCFC"
	            android:padding="5dp"
	            />
	        <View 
	            android:layout_height="0.5dp"
	            android:layout_width="match_parent"
	            android:background="@color/devide_line"/>
	        <EditText 
	            android:id="@+id/password"
	            android:layout_width="match_parent"
	            android:layout_height="50dp"
	            android:inputType="textPassword"
	            android:maxLines="1"
	            android:maxLength="18"
	            android:hint="@string/password_hint"
	            android:background="#FBFCFC"
	            android:padding="5dp"
	            />
	        
	        
	    </LinearLayout>
	    <LinearLayout 
	        android:id="@+id/login_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        >
			    <Button 
			            android:id="@+id/login"
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:text="@string/login"
			            android:background="@drawable/login_button"
			            android:textColor="#FFFFFF"
			            android:layout_weight="1"
			            android:layout_margin="5dp"
			            android:padding="5dp"
			            android:textSize="24sp"
			            />
				<Button 
			            android:id="@+id/register"
			            android:layout_height="wrap_content"
			            android:layout_width="match_parent"
			            android:text="@string/register"
			            android:background="@drawable/login_button"
			            android:textColor="#FFFFFF"
			            android:layout_weight="1"
			            android:layout_margin="5dp"
			            android:padding="5dp"
			            android:textSize="24sp"
			            />
			</LinearLayout>
				<Button 
				        android:id="@+id/find_password"
				        android:layout_height="wrap_content"
				        android:layout_width="wrap_content"
				        android:text="@string/find_password"
				        android:background="#FFFFFF"
				        android:textColor="#808080"
						android:textSize="24sp"
				        android:layout_marginRight="25dp"
				        android:padding="5dp"
				        android:layout_gravity="right"
				        />
	</LinearLayout>
</LinearLayout>
